--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,7 +24,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/iv_item_image"
+                android:id="@+id/iv_country_image"
                 android:layout_width="500dp"
                 android:layout_height="200dp"
                 android:layout_marginLeft="20dp"
